- Allow setting null values for environments (the admin webapp likes doing that).
git-svn-id: https://svn.apache.org/repos/asf/tomcat@288143 13f79535-47bb-0310-9956-ffa450edef68